<resources>
    <string name="app_name">Weather Now</string>

    <string name="send_log_to_developer">Send Log to Developer</string>
    <string name="_hiphen">_</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="internal_server">Internal server error encountered.</string>
    <string name="ok_button">OK</string>
    <string name="unauthenticated_error">Unauthenticated. Please check config and try again.</string>
    <string name="unauthenticated">Unauthenticated</string>
    <string name="message">Message</string>
    <string name="connection_timeout_message">Connection timed out. Please check connectivity try again.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="next">NEXT</string>
    <string name="view_details">View Details</string>

    <string name="weather">WEATHER</string>
    <string name="now">NOW</string>
    <string name="by_pratik">by Pratik</string>
    <string name="search_city">Search your city</string>
    <string name="skip">Skip</string>

    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">less than a minute</string>
    <string name="time_ago_minute">about a minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hour">about an hour</string>
    <string name="time_ago_hours">about %d hours</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">about a month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">about a year</string>
    <string name="time_ago_years">%d years</string>
    <string name="back">Back</string>
    <string name="data_connectivity">Data connectivity</string>
    <string name="data_connectivity_message">Please check your data connectivity.</string>

    <string name="already_up_to_date">Already up to date.</string>

</resources>
