<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#0099cc"
             tools:context=".activity.LaunchActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

        <LinearLayout
                style="?metaButtonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:keepScreenOn="true"
                android:layout_gravity="center"
                android:background="@color/black_overlay"
                android:orientation="vertical"
                tools:ignore="UselessParent">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#33b5e5"
                    android:textSize="50sp"
                    android:gravity="center"
                    android:text="@string/weather"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:textColor="#33b5e5"
                      android:textStyle="bold"
                      android:textSize="50sp"
                      android:gravity="center"
                      android:text="@string/now"/>
        </LinearLayout>

        <LinearLayout style="?metaButtonBarStyle"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:keepScreenOn="true"
                      android:layout_gravity="center"
                      android:background="@color/black_overlay"
                      android:layout_marginTop="100dp"
                      android:orientation="vertical"
                      tools:ignore="UselessParent">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#33b5e5"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/by_pratik"/>

        </LinearLayout>
    </LinearLayout>


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true">

        <LinearLayout android:id="@+id/fullscreen_content_controls"
                      style="?metaButtonBarStyle"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:visibility="invisible"
                      android:layout_gravity="bottom|center_horizontal"
                      android:background="@color/black_overlay"
                      android:orientation="horizontal"
                      tools:ignore="UselessParent">

            <Button android:id="@+id/button_next"
                    style="?metaButtonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/next"/>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>