<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

        <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_hiphen"
                android:textColor="@color/black" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineViewColor" />

        <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/_hiphen"
                android:textColor="@color/black" />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineViewColor" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/no"
                    android:textColor="@color/colorPrimary" />

            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/lineViewColor" />

            <TextView
                    android:id="@+id/tv_confirm"
                    android:layout_width="0dp"
                    android:background="?selectableItemBackground"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/yes"
                    android:textColor="#0000CD" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>